# PdTermV1

./: .gitignore  CMakeLists.txt  PdTermmainterminal.cpp  PdTermmainterminal.h  PdTermmainterminal.ui  README.md  icons.qrc  main.cpp  pdterminalcontrol.cpp  pdterminalcontrol.h  pdtermserial.cpp  pdtermserial.h  pdtermxmodem.cpp  pdtermxmodem.h  pgtermmainterminal.cpp  pgtermmainterminal.h  pgtermmainterminal.ui  worker.cpp  worker.h
icons/: PdTermV1.desktop
